--- a/front-end/src/app/login/home/login.component.html
+++ b/front-end/src/app/login/home/login.component.html
@@ -2,7 +2,7 @@
     <mat-card id="card">
         <h1 mat-card-title> Login </h1>
         <mat-card-content>
-            <form [formGroup]="usuarioForm" id="form">
+            <form [formGroup]="usuarioForm" id="form" (keydown)="loginKeyDown($event)">
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
                     <input matInput placeholder="" type="text" minlength="3" formControlName="email">
@@ -14,13 +14,12 @@
                     <input matInput type="password" formControlName="password">
                     <mat-icon matSuffix>vpn_key</mat-icon>
                 </mat-form-field>
-            
+
             </form>
 
         </mat-card-content>
         <mat-card-actions id="action">
-            <button mat-raised-button color="primary" [disabled]="!usuarioForm.valid" type="submit" class="button"
-                (click)="login()">
+            <button mat-raised-button color="primary" [disabled]="!usuarioForm.valid" type="submit" class="button" (click)="login()">
                 <mat-icon>login</mat-icon>
             </button>
         </mat-card-actions>
